--- a/src/Resources/translations/messages.cs.yml
+++ b/src/Resources/translations/messages.cs.yml
@@ -6,5 +6,5 @@ czende:
         production: Produkční prostředí
         collection_place_code: Kód sběrného místa
         client_id: Klientské ID
-        client_secret: Klientský tajný klíč
+        client_secret: Klientské heslo
         refresh_token: Refresh token
