Fixed external shipment service choice type

--- a/src/Resources/translations/messages.cs.yml
+++ b/src/Resources/translations/messages.cs.yml
@@ -1,6 +1,6 @@
 czende:
     balikonos:
-        external_shipment_code: Externí kód přepravce
+        external_shipment_service: Externí přepravce
         environment: Prostředí
         sandbox: Testovací prostředí
         production: Produkční prostředí
